Change structure of the project

--- a/src/Components/Pages/Projects.scss
+++ b/src/Components/Pages/Projects.scss
@@ -1,5 +1,5 @@
-@import "../Styles/consts";
-@import "../Styles/mixins";
+@import "../../Styles/consts";
+@import "../../Styles/mixins";
 
 .Projects {
   background-color: black;
