--- a/src/Components/Pages/AboutMe.scss
+++ b/src/Components/Pages/AboutMe.scss
@@ -1,5 +1,5 @@
-@import "../Styles/consts";
-@import "../Styles/mixins";
+@import "../../Styles/consts";
+@import "../../Styles/mixins";
 
 .AboutMe {
   padding-top: 5rem;
