--- a/src/Components/Pages/LandingPage.scss
+++ b/src/Components/Pages/LandingPage.scss
@@ -1,5 +1,5 @@
-@import "../Styles/consts";
-@import "../Styles/mixins";
+@import "../../Styles/consts";
+@import "../../Styles/mixins";
 
 @keyframes gradient {
   0% {
