Redesign contact page

--- a/src/Components/ScrollToTop.scss
+++ b/src/Components/ScrollToTop.scss
@@ -4,10 +4,10 @@
 .ScrollToTop {
   width: fit-content;
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 1em;
+  right: 1em;
 
-  margin: 2vh;
+  margin: 1em;
   cursor: pointer;
 }
 
