--- a/src/Components/Pages/Contact.scss
+++ b/src/Components/Pages/Contact.scss
@@ -2,76 +2,66 @@
 @import "../../Styles/mixins";
 
 .Contact {
+  overflow: hidden;
+  height: 50vh;
+  padding-bottom: 3em;
   background-color: black;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1em;
   justify-content: center;
   align-items: center;
+  color: $light-warm-color;
+}
 
-  h3 {
-    color: $light-warm-color;
-    font-size: 3vh;
-    margin: 2rem;
+.contact-me-text {
+  font-size: 3em;
+  margin-right: 0.5em;
+  &::after {
+    content: "";
+    height: 100%;
+    border: 1px solid $light-warm-color;
+    margin-left: 0.5em;
   }
 
-  form {
-    width: 40%;
-    margin: auto;
+  @media only screen and (orientation: portrait) {
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    color: $light-warm-color;
-
-    label {
-      font-size: 3vh;
-    }
-
-    input,
-    textarea {
-      height: 2rem;
-      background-color: transparent;
-      border: none;
-      border-bottom: 1px solid $light-cold-color;
-      color: $light-warm-color;
-      font-size: 2vh;
+    margin: 0;
+    &::after {
+      content: "";
       width: 100%;
-
-      &:focus {
-        outline: none;
-      }
-
-      &::placeholder {
-        font-family: "Poppins", sans-serif;
-        font-weight: 400;
-      }
-
-      &[type="submit"] {
-        background-color: rgba($light-warm-color, 0.7);
-        text-align: center;
-        color: black;
-        border: none;
-        border-radius: 16px;
-        width: 70%;
-        transition: all 0.5s;
-        cursor: pointer;
-
-        &:hover {
-          background-color: rgba($light-warm-color, 1);
-        }
-      }
-    }
-
-    textarea {
-      height: 15rem;
-      resize: vertical;
+      border: 1px solid $light-warm-color;
+      margin: 0;
     }
   }
+}
 
-  .links {
-    svg {
-      fill: $light-warm-color;
-    }
+.contact-details {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  align-items: flex-start;
+}
+
+.contact-item {
+  height: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 0.5em;
+
+  a {
+    color: $light-warm-color;
+    text-decoration: none;
+    font-size: 1.5em;
   }
+}
+
+.contact-icon {
+  font-size: 2em;
 }
